Adam updated html

--- a/my htmls/My Cart.html
+++ b/my htmls/My Cart.html
@@ -87,8 +87,14 @@
         </table>
       </div>
 
+      <!-- Checkout Info -->
+      <div class="center-container">
+        <h4 id="display-info-cart">Southeast > Vending Machine A</h4>
+      </div>
       <!-- Checkout button -->
-      <button id="checkout-btn">Checkout</button>
+      <div class="center-container">
+        <button type="button" class="btn btn-success" style="width: 200px;">Checkout</button>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
