--- a/Adam HTML/Individual Machine.html
+++ b/Adam HTML/Individual Machine.html
@@ -7,7 +7,7 @@
     <link href="./index.css" rel="stylesheet">
     <title>Individual Machine Dashboard</title>
 </head>
-<body>
+<body onload="handleOnLoad()">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">TTV</a>
@@ -28,8 +28,8 @@
           </ul>
         </div>
         <div class="cart-container">
-            <a class="navbar-cart" href="#">Cart</a>
-            <a href="#">    
+            <a class="navbar-cart" href="./My Cart.html">Cart</a>
+            <a href="./My Cart.html">    
                 <img src="./images/cart.png" id="cart-img">
             </a>
         </div>
@@ -39,94 +39,10 @@
       <h4 class="display-machine">Southeast Region > Vending Machine A</h4>
 
       <!-- Product List -->
-        <table class="product-table">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                                <h5 class="card-title">Diet Coke</h5>
-                                <img src="./images/Diet Coke.png">
-                                <p class="card-text">Price: $2.00</p>
-                                <p class="card-text">Quantity: 18</p>
-                                <button class="add-to-cart">Add to Cart</button>
-                            </div>
-                        </div>
-                    </td>
-
-                    <td>
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                                <h5 class="card-title">Diet Vanilla Coke</h5>
-                                <img src="./images/Diet Vanilla Coke.png">
-                                <p class="card-text">Price: $2.25</p>
-                                <p class="card-text">Quantity: 13</p>
-                                <button class="add-to-cart">Add to Cart</button>
-                            </div>
-                        </div>
-                    </td>
-
-                    <td>
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                                <h5 class="card-title">Sprite</h5>
-                                <img src="./images/Sprite.png">
-                                <p class="card-text">Price: $2.50</p>
-                                <p class="card-text">Quantity: 8</p>
-                                <button class="add-to-cart">Add to Cart</button>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                                <h5 class="card-title">Pepsi</h5>
-                                <img src="./images/Pepsi.png">
-                                <p class="card-text">Price: $2.15</p>
-                                <p class="card-text">Quantity: 22</p>
-                                <button class="add-to-cart">Add to Cart</button>
-                            </div>
-                        </div>
-                    </td>
-
-                    <td>
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                                <h5 class="card-title">Cherry Coke</h5>
-                                <img src="./images/Cherry Coke.png">
-                                <p class="card-text">Price: $2.30</p>
-                                <p class="card-text">Quantity: 19</p>
-                                <button class="add-to-cart">Add to Cart</button>
-                            </div>
-                        </div>
-                    </td>
-
-                    <td>
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                                <h5 class="card-title">Fanta</h5>
-                                <img src="./images/Fanta.png">
-                                <p class="card-text">Price: $1.95</p>
-                                <p class="card-text">Quantity: 6</p>
-                                <button class="add-to-cart">Add to Cart</button>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <div id="app"></div>
 
 
-
+    <script src="../Adam JS/individual machine.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
