--- a/Adam HTML/My Cart.html
+++ b/Adam HTML/My Cart.html
@@ -7,7 +7,7 @@
     <link href="./index.css" rel="stylesheet">
     <title>My Cart</title>
 </head>
-<body>
+<body onload="handleOnLoad()">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">TTV</a>
@@ -28,74 +28,14 @@
           </ul>
         </div>
         <div class="cart-container">
-            <a class="navbar-backtomachine" href="#">&lt Back To Vending Machine</a>
+            <a class="navbar-backtomachine" href="./Individual Machine.html">&lt Back To Vending Machine</a>
         </div>
       </nav>
 
       <!-- Cart Container -->
-      <div class="table-responsive" id="cart-table">
-        <table class="table align-middle">
-          <thead>
-            <th>
-              Image
-            </th>
-            <th>
-                Name
-            </th>
-            <th>
-                Price
-            </th>
-          </thead>
-          <tbody>
-            <div id="cart-rows">
-                <tr>
-                    <td>
-                        <img src="./images/Doritos.png" id="cart-rows">
-                    </td>
-                    <td>
-                        <h3 id="cart-rows">Doritos - Cool Ranch</h3>
-                    </td>
-                    <td>
-                        <h3 id="cart-rows">$1.00</h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="./images/Diet Coke.png" id="cart-rows">
-                    </td>
-                    <td>
-                        <h3 id="cart-rows">Diet Coke</h3>
-                    </td>
-                    <td>
-                        <h3 id="cart-rows">$1.50</h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="./images/SmartWater.png" id="cart-rows">
-                    </td>
-                    <td>
-                        <h3 id="cart-rows">Smartwater</h3>
-                    </td>
-                    <td>
-                        <h3 id="cart-rows">$2.50</h3>
-                    </td>
-                </tr>
-            </div>
-            
-          </tbody>
-        </table>
-      </div>
-
-      <!-- Checkout Info -->
-      <div class="center-container">
-        <h4 id="display-info-cart">Southeast > Vending Machine A</h4>
-      </div>
-      <!-- Checkout button -->
-      <div class="center-container">
-        <button type="button" class="btn btn-success" style="width: 200px;">Checkout</button>
-      </div>
-
+      <div id="app"></div>
+      
+    <script src="../Adam JS/my cart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
