--- a/HTML/Uyen HTML/AddProduct.html
+++ b/HTML/Uyen HTML/AddProduct.html
@@ -26,63 +26,97 @@
             </div>
         </nav>
 
-        <div class="center-container">
-          <h1>Form: Add New Products</h1>
+        <div class="center-container" style="background-color: firebrick;">
+          <h1 style="color:whitesmoke">Form: Add New Products</h1>
         </div>
-      <form id="add-new-product-form">
-        <div class="row justify-content-center">
-          <!-- FIRST COLUMN -->
-          <div class="col-3">
-            <!-- product name -->
-            <div>
-              <label for="product-name" class="col-form-label">Product Name</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="product-name">
+        <form id="add-new-product-form">
+          <div class="row justify-content-center">
+            <!-- FIRST COLUMN -->
+            <div class="col-4">
+              <!-- product name -->
+              <div>
+                <!-- label for product name -->
+                <label for="product-name" class="col-form-label">Product Name</label>
+                <!-- dropdown for product name -->
+                <div class="col-sm-10">
+                  <input class="form-control" list="product-name-list" id="product-name" placeholder="Search product..." />
+                  <datalist id="product-name-list">
+                    <option value="Gryfindor">
+                    <option value="Hufflepuff">
+                    <option value="Slytherin">
+                    <option value="Ravenclaw">
+                    <option value="Horned Serpent">
+                    <option value="Thunderbird">
+                    <option value="Pukwudgie">
+                    <option value="Wampus">
+                </div>
+              </div>
+              <!-- product category -->
+              <div>
+                <!-- label for product category -->
+                <label for="product-category" class="col-form-label">Product Category</label>
+                <!-- dropdown for product category -->
+                <div class="col-sm-10">
+                  <div class="btn-group" id="product-category">
+                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Choose category</button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <!-- unit price -->
+              <div>
+                <!-- label for unit price -->
+                <label for="unit-price" class="col-form-label">Unit Price ($)</label>
+                <!-- number input for unit price -->
+                <div class="col-sm-10">
+                  <input type="number" step="0.01" class="form-control" min="0" id="unit-price">
+                </div>
+              </div>
+              <!-- Submit button -->
+              <div style="margin-top: 30px"><button type="submit" class="btn btn-danger">Add Products</button></div>
+            </div>
+            <!-- SECOND COLUMN -->
+            <div class="col-4">
+              <!-- vending machine id -->
+              <div>
+                <label for="vm-id" class="col-form-label">Vending Machine ID</label>
+                <!-- dropdown for VM id -->
+                <div class="col-sm-10">
+                  <input class="form-control" list="vending-machine-list" id="vm-id" placeholder="Look up vending machine..." />
+                  <datalist id="vending-machine-list">
+                    <option value="Gryfindor">
+                    <option value="Hufflepuff">
+                    <option value="Slytherin">
+                    <option value="Ravenclaw">
+                    <option value="Horned Serpent">
+                    <option value="Thunderbird">
+                    <option value="Pukwudgie">
+                    <option value="Wampus">
+                </div>
+              </div>
+              <!-- quantity -->
+              <div>
+                <!-- label for quantity -->
+                <label for="quantity" class="col-form-label">Quantity</label>
+                <!-- number input for quantity -->
+                <div class="col-sm-10">
+                  <input type="number" min=1 class="form-control" id="quantity">
+                </div>
+              </div>
+              <!-- product description -->
+              <div>
+                <label for="description" class="col-form-label">Product Description</label>
+                <div class="col-sm-10">
+                  <textarea class="form-control" id="description" rows="4" placeholder="Enter here..."></textarea>
+                </div>
               </div>
             </div>
-            <!-- product category -->
-            <div>
-              <label for="product-category" class="col-form-label">Product Category</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="product-category">
-              </div>
-            </div>
-            <!-- unit price -->
-            <div>
-              <label for="unit-price" class="col-form-label">Unit Price</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="unit-price">
-              </div>
-            </div>
-            <!-- Submit button -->
-            <div style="margin-top: 15px"><button type="submit" class="btn btn-primary">Submit</button></div>
           </div>
-          <!-- SECOND COLUMN -->
-          <div class="col-3">
-            <!-- vending machine id -->
-            <div>
-              <label for="vm-id" class="col-form-label">Vending Machine ID</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="vm-id">
-              </div>
-            </div>
-            <!-- quantity -->
-            <div>
-              <label for="quantity" class="col-form-label">Quantity</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="quantity">
-              </div>
-            </div>
-            <!-- product description -->
-            <div>
-              <label for="description" class="col-form-label">Product Description</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="description">
-              </div>
-            </div>
-          </div>
-        </div>
-      </form>
+        </form>
 
 
 
