--- a/client/HTML/AddStocks.html
+++ b/client/HTML/AddStocks.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="./AddProduct.css" rel="stylesheet">
+    <link href="../styles/Form.css" rel="stylesheet">
     <title>TTV</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
         </nav>
 
         <div class="center-container" style="background-color: firebrick;">
-          <h1 style="color:whitesmoke">Form: Add New Products</h1>
+          <h1 style="color:whitesmoke">Form: Add New Stocks</h1>
         </div>
         <form id="add-new-product-form">
           <div class="row justify-content-center">
@@ -92,7 +92,7 @@
                     <option value="Hufflepuff">
                     <option value="Slytherin">
                     <option value="Ravenclaw">
-                    <option value="Horned Serpent">
+                     <option value="Horned Serpent">
                     <option value="Thunderbird">
                     <option value="Pukwudgie">
                     <option value="Wampus">
