Uyen edited the AddStocks

--- a/client/HTML/AdminInventoryDashboard.html
+++ b/client/HTML/AdminInventoryDashboard.html
@@ -62,7 +62,7 @@
       
 
       <div class="AddNewBtn">
-        <a class="AddNewBtn" href="https://www.google.com/">
+        <a class="AddNewBtn" href="./AddStocks.html">
             <button type="button" class="btn btn-primary">+Add New</button>
         </a>
     </div>
