--- a/client/HTML/AddStocks.html
+++ b/client/HTML/AddStocks.html
@@ -6,7 +6,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="../styles/Form.css" rel="stylesheet">
-    <title>TTV</title>
+    <title>Add New Stocks</title>
 </head>
 <body>
         <!-- Navbar -->
@@ -77,7 +77,11 @@
                 </div>
               </div>
               <!-- Submit button -->
-              <div style="margin-top: 30px"><button type="submit" class="btn btn-danger">Add Products</button></div>
+              <div style="margin-top: 30px">
+                <button type="submit" class="btn btn-danger">Add Products</button>
+                <a></a>
+                <button type="submit" class="btn btn-secondary">Cancel</button>
+              </div>
             </div>
             <!-- SECOND COLUMN -->
             <div class="col-4">
