--- a/client/HTML/EditStocks.html
+++ b/client/HTML/EditStocks.html
@@ -58,7 +58,7 @@
                 <!-- dropdown for product category -->
                 <div class="col-sm-10">
                   <div class="btn-group" id="product-category">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Choose category</button>
+                    <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Choose category</button>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#">Action</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -77,7 +77,12 @@
                 </div>
               </div>
               <!-- Submit button -->
-              <div style="margin-top: 30px"><button type="submit" class="btn btn-danger">Add Products</button></div>
+              <div style="margin-top: 30px">
+                <button type="submit" class="btn btn-danger">Add Products</button>
+                <a class="cancelBtn" href="./AdminInventoryDashboard.html">
+                    <button type="button" class="btn btn-outline-secondary">Cancel</button>
+                </a>
+            </div>
             </div>
             <!-- SECOND COLUMN -->
             <div class="col-4">
