added models Commit

--- a/client/HTML/LandingPage.html
+++ b/client/HTML/LandingPage.html
@@ -31,8 +31,8 @@
       <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">Welcome to TTV</h1>
-            <a href="#" class="btn btn-danger my-2">Customer</a>
-            <a href="#" class="btn btn-secondary my-2">Manager</a>
+            <a href="./Individual Machine.html" class="btn btn-danger my-2">Customer</a>
+            <a href="./AdminLogin.html" class="btn btn-secondary my-2">Manager</a>
           </p>
         </div>
       </section>
