--- a/client/HTML/EditStocks.html
+++ b/client/HTML/EditStocks.html
@@ -40,15 +40,7 @@
                 <!-- dropdown for product name -->
                 <div class="col-sm-10">
                   <input class="form-control" list="product-name-list" id="product-name" placeholder="Search product..." />
-                  <datalist id="product-name-list">
-                    <option value="Gryfindor">
-                    <option value="Hufflepuff">
-                    <option value="Slytherin">
-                    <option value="Ravenclaw">
-                    <option value="Horned Serpent">
-                    <option value="Thunderbird">
-                    <option value="Pukwudgie">
-                    <option value="Wampus">
+                  <datalist id="product-name-list"></datalist>
                 </div>
               </div>
               <!-- product category -->
@@ -57,14 +49,8 @@
                 <label for="product-category" class="col-form-label">Product Category</label>
                 <!-- dropdown for product category -->
                 <div class="col-sm-10">
-                  <div class="btn-group" id="product-category">
-                    <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Choose category</button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </div>
+                  <input class="form-control" list="product-category-list" id="product-category" placeholder="Choose category..." />
+                  <datalist id="product-category-list"></datalist>
                 </div>
               </div>
               <!-- unit price -->
@@ -92,15 +78,7 @@
                 <!-- dropdown for VM id -->
                 <div class="col-sm-10">
                   <input class="form-control" list="vending-machine-list" id="vm-id" placeholder="Look up vending machine..." />
-                  <datalist id="vending-machine-list">
-                    <option value="Gryfindor">
-                    <option value="Hufflepuff">
-                    <option value="Slytherin">
-                    <option value="Ravenclaw">
-                     <option value="Horned Serpent">
-                    <option value="Thunderbird">
-                    <option value="Pukwudgie">
-                    <option value="Wampus">
+                  <datalist id="vending-machine-list"></datalist>
                 </div>
               </div>
               <!-- quantity -->
@@ -127,7 +105,8 @@
 
     <!-- Boostrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
+    <!-- My JS -->
+    <script src="../JS/EditStocks.js"></script>
     
     <!-- Dropdown search!!! -->
     <!-- <script>
