--- a/client/HTML/AddStocks.html
+++ b/client/HTML/AddStocks.html
@@ -31,10 +31,10 @@
         </div>
         <form id="add-new-product-form">
           <div class="row justify-content-center">
-            <!-- FIRST COLUMN -->
+            <!-- ******FIRST COLUMN********* -->
             <div class="col-4">
-              <!-- product name -->
-              <div>
+              <!-- PRODUCT NAME -->
+              <div id= 'product-name-div'>
                 <!-- label for product name -->
                 <label for="product-name" class="col-form-label">Product Name</label>
                 <!-- dropdown for product name -->
@@ -42,9 +42,16 @@
                   <input class="form-control" list="product-name-list" id="product-name" placeholder="Search product..." />
                   <datalist id="product-name-list"></datalist>
                 </div>
+                <!-- handle other product-name input -->
+                <div id="other-product-name" hidden>
+                  <label for="product-name-self-input" class="col-form-label">*Specify Other*</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" id="product-name-self-input" />
+                  </div>
+                </div>
               </div>
-              <!-- product category -->
-              <div>
+              <!-- PRODUCT CATEGORY -->
+              <div id='product-category-div'>
                 <!-- label for product category -->
                 <label for="product-category" class="col-form-label">Product Category</label>
                 <!-- dropdown for product category -->
@@ -52,8 +59,15 @@
                   <input class="form-control" list="product-category-list" id="product-category" placeholder="Choose category..." />
                   <datalist id="product-category-list"></datalist>
                 </div>
+                <!-- handle other product-category input -->
+                <div id="other-product-category" hidden>
+                  <label for="product-category-self-input" class="col-form-label">*Specify Other*</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" id="product-category-self-input" />
+                  </div>
+                </div>
               </div>
-              <!-- unit price -->
+              <!-- UNIT PRICE -->
               <div>
                 <!-- label for unit price -->
                 <label for="unit-price" class="col-form-label">Unit Price ($)</label>
@@ -62,26 +76,33 @@
                   <input type="number" step="0.01" class="form-control" min="0" id="unit-price">
                 </div>
               </div>
-              <!-- Submit button -->
+              <!-- SUBMIT BUTTON -->
               <div style="margin-top: 30px">
-                <button type="submit" class="btn btn-danger">Add Products</button>
+                <button class="btn btn-danger" id="submit-button">Add Products</button>
                 <a class="cancelBtn" href="./AdminInventoryDashboard.html">
                   <button type="button" class="btn btn-outline-secondary">Cancel</button>
                 </a>
               </div>
             </div>
-            <!-- SECOND COLUMN -->
+            <!-- *********SECOND COLUMN************ -->
             <div class="col-4">
-              <!-- vending machine id -->
-              <div>
+              <!-- VENDING MACHINE ID -->
+              <div id= 'vm-id-div'>
                 <label for="vm-id" class="col-form-label">Vending Machine ID</label>
                 <!-- dropdown for VM id -->
                 <div class="col-sm-10">
-                  <input class="form-control" list="vending-machine-list" id="vm-id" placeholder="Look up vending machine..." />
-                  <datalist id="vending-machine-list"></datalist>
+                  <input class="form-control" list="vm-id-list" id="vm-id" placeholder="Look up vending machine..." />
+                  <datalist id="vm-id-list"></datalist>
+                </div>
+                <!-- handle other vm-id input -->
+                <div id="other-vm-id" hidden>
+                  <label for="vm-id-self-input" class="col-form-label">*Specify Other*</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" id="vm-id-self-input" />
+                  </div>
                 </div>
               </div>
-              <!-- quantity -->
+              <!-- QUANTITY -->
               <div>
                 <!-- label for quantity -->
                 <label for="quantity" class="col-form-label">Quantity</label>
@@ -90,7 +111,7 @@
                   <input type="number" min=1 class="form-control" id="quantity">
                 </div>
               </div>
-              <!-- product description -->
+              <!-- DESCRIPTION -->
               <div>
                 <label for="description" class="col-form-label">Product Description</label>
                 <div class="col-sm-10">
