--- a/client/HTML/AddStocks.html
+++ b/client/HTML/AddStocks.html
@@ -78,7 +78,7 @@
               </div>
               <!-- SUBMIT BUTTON -->
               <div style="margin-top: 30px">
-                <button class="btn btn-danger" id="submit-button">Add Products</button>
+                <button type="submit" class="btn btn-danger" id="submit-button">Add Products</button>
                 <a class="cancelBtn" href="./AdminInventoryDashboard.html">
                   <button type="button" class="btn btn-outline-secondary">Cancel</button>
                 </a>
