--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -56,7 +56,7 @@
                 <label for="product-category" class="col-form-label">Product Category</label>
                 <!-- dropdown for product category -->
                 <div class="col-sm-10">
-                  <input class="form-control" list="product-category-list" id="product-category" placeholder="Choose category..." />
+                  <input class="form-control" list="product-category-list" id="product-category" placeholder="Choose category..." readonly/>
                   <datalist id="product-category-list"></datalist>
                 </div>
                 <!-- handle other product-category input -->
@@ -82,13 +82,6 @@
                 <div class="col-sm-10">
                   <textarea class="form-control" id="description" rows="4" placeholder="Enter here..."></textarea>
                 </div>
-              </div>
-              <!-- SUBMIT BUTTON -->
-              <div style="margin-top: 30px">
-                <button type="submit" class="btn btn-danger" id="submit-button">Add Products</button>
-                <a class="cancelBtn" href="./AdminInventoryDashboard.html">
-                  <button type="button" class="btn btn-outline-secondary">Cancel</button>
-                </a>
               </div>
             </div>
             <!-- *********SECOND COLUMN************ -->
@@ -118,6 +111,13 @@
                   <input type="number" min=1 class="form-control" id="quantity">
                 </div>
               </div>
+              <!-- SUBMIT BUTTON -->
+              <div style="margin-top: 30px">
+                <button type="submit" class="btn btn-danger" id="submit-button">Add Products</button>
+                <a class="cancelBtn" href="./AdminInventoryDashboard.html">
+                  <button type="button" class="btn btn-outline-secondary">Cancel</button>
+                </a>
+              </div>
             </div>
           </div>
         </form>
@@ -127,7 +127,7 @@
     <!-- Boostrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- My JS -->
-    <script src="../JS/AddStocks.js"></script>
+    <script src="../JS/AddNewStocks.js"></script>
         
 </body>
 </html>
