--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -73,14 +73,14 @@
                 <label for="unit-price" class="col-form-label">Unit Price ($)</label>
                 <!-- number input for unit price -->
                 <div class="col-sm-10">
-                  <input type="number" step="0.01" class="form-control" min="0" id="unit-price">
+                  <input type="number" step="0.01" class="form-control" min="0" id="unit-price" readonly>
                 </div>
               </div>
               <!-- DESCRIPTION -->
               <div>
                 <label for="description" class="col-form-label">Product Description</label>
                 <div class="col-sm-10">
-                  <textarea class="form-control" id="description" rows="4" placeholder="Enter here..."></textarea>
+                  <textarea class="form-control" id="description" rows="4" placeholder="Enter here..." readonly></textarea>
                 </div>
               </div>
             </div>
