Uyen added vending machine validation

--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -93,8 +93,8 @@
                 <div class="col-sm-10">
                   <input class="form-control" list="vending-machine-list" id="vending-machine" placeholder="Look up vending machine..." />
                   <datalist id="vending-machine-list"></datalist>
-                  <p id="error-message-vm-input" hidden>This vending machine is not for this type of product</p>
                 </div>
+                <p id="warning-message" hidden>This machine is not for this product type</p>
                 <!-- handle other vending-machine input -->
                 <div id="other-vending-machine" hidden>
                   <label for="vending-machine-self-input" class="col-form-label">*If chose "Other", enter the new vending machine's name*</label>
