--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -44,10 +44,11 @@
                 </div>
                 <!-- handle other product-name input -->
                 <div id="other-product-name" hidden>
-                  <label for="product-name-self-input" class="col-form-label">*Specify Other*</label>
+                  <label for="product-name-self-input" class="col-form-label">***If chose "Other", please specify:</label>
                   <div class="col-sm-10">
                     <input type="text" class="form-control" id="product-name-self-input" />
                   </div>
+                  <p id="error-message" hidden>This product already exists</p>  
                 </div>
               </div>
               <!-- PRODUCT CATEGORY -->
@@ -58,13 +59,6 @@
                 <div class="col-sm-10">
                   <input class="form-control" list="product-category-list" id="product-category" placeholder="Choose category..." readonly/>
                   <datalist id="product-category-list"></datalist>
-                </div>
-                <!-- handle other product-category input -->
-                <div id="other-product-category" hidden>
-                  <label for="product-category-self-input" class="col-form-label">*Specify Other*</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="product-category-self-input" />
-                  </div>
                 </div>
               </div>
               <!-- UNIT PRICE -->
@@ -94,18 +88,7 @@
                   <input class="form-control" list="vending-machine-list" id="vending-machine" placeholder="Look up vending machine..." />
                   <datalist id="vending-machine-list"></datalist>
                 </div>
-                <p id="warning-message" hidden>This machine is not for this product type</p>
-                <!-- handle other vending-machine input -->
-                <div id="other-vending-machine" hidden>
-                  <label for="vending-machine-self-input" class="col-form-label">*If chose "Other", enter the new vending machine's name*</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="vending-machine-self-input" />
-                  </div>
-                  <label for="vm-type-self-input" class="col-form-label">*Enter the vending machine's type*</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="vm-type-self-input" list="product-category-list" />
-                  </div>
-                </div>
+                <p id="warning-message" hidden>This machine is not for this product type</p>  
               </div>
               <!-- QUANTITY -->
               <div>
