--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="../styles/Form.css" rel="stylesheet">
+    <link href="../CSS/Form.css" rel="stylesheet">
     <title>Add New Stocks</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
                   <div class="col-sm-10">
                     <input type="text" class="form-control" id="product-name-self-input" />
                   </div>
-                  <p id="error-message" hidden>This product already exists</p>  
+                  <p id="product-existed-message" class="message-display" hidden>This product already exists</p>  
                 </div>
               </div>
               <!-- PRODUCT CATEGORY -->
@@ -88,7 +88,7 @@
                   <input class="form-control" list="vending-machine-list" id="vending-machine" placeholder="Look up vending machine..." />
                   <datalist id="vending-machine-list"></datalist>
                 </div>
-                <p id="warning-message" hidden>This machine is not for this product type</p>  
+                <p id="unmatching-type-message" class="message-display" hidden>This machine is not for this product type</p>  
               </div>
               <!-- QUANTITY -->
               <div>
