--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -98,6 +98,7 @@
                 <div class="col-sm-10">
                   <input type="number" min=1 class="form-control" id="quantity">
                 </div>
+                <p id="overcap-message" class="message-display" hidden></p>
               </div>
               <!-- SUBMIT BUTTON -->
               <div style="margin-top: 30px">
@@ -115,7 +116,7 @@
     <!-- Boostrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- My JS -->
-    <script src="../JS/AddNewStocks.js"></script>
+    <script src="../JS/AddStocks.js"></script>
         
 </body>
 </html>
