Adam individual machine

--- a/client/HTML/Individual Machine.html
+++ b/client/HTML/Individual Machine.html
@@ -30,7 +30,7 @@
         <div class="cart-container">
             <a class="navbar-cart" href="./My Cart.html">Cart</a>
             <a href="./My Cart.html">    
-                <img src="./images/cart.png" id="cart-img">
+                <img src="https://static-00.iconduck.com/assets.00/shopping-cart-icon-512x462-yrde1eu0.png" id="cart-img">
             </a>
         </div>
       </nav>
