--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -42,6 +42,7 @@
                   <input class="form-control" list="product-name-list" id="product-name" placeholder="Search product..." />
                   <datalist id="product-name-list"></datalist>
                 </div>
+                <p id="not-predefined-product-name-message" class="message-display" hidden>Please choose from list only</p>  
                 <!-- handle other product-name input -->
                 <div id="other-product-name" hidden>
                   <label for="product-name-self-input" class="col-form-label">***If chose "Other", please specify:</label>
@@ -60,6 +61,7 @@
                   <input class="form-control" list="product-category-list" id="product-category" placeholder="Choose category..." readonly/>
                   <datalist id="product-category-list"></datalist>
                 </div>
+                <p id="not-predefined-product-category-message" class="message-display" hidden>Please choose from list only</p>
               </div>
               <!-- UNIT PRICE -->
               <div>
@@ -80,15 +82,17 @@
             </div>
             <!-- *********SECOND COLUMN************ -->
             <div class="col-4">
-              <!-- VENDING MACHINE ID -->
+              <!-- VENDING MACHINE -->
               <div id= 'vending-machine-div'>
                 <label for="vending-machine" class="col-form-label">Vending Machine ID</label>
-                <!-- dropdown for VM id -->
+                <!-- dropdown for VM -->
                 <div class="col-sm-10">
                   <input class="form-control" list="vending-machine-list" id="vending-machine" placeholder="Look up vending machine..." />
                   <datalist id="vending-machine-list"></datalist>
                 </div>
                 <p id="unmatching-type-message" class="message-display" hidden>This machine is not for this product type</p>  
+                <p id="not-predefined-vending-machine-message" class="message-display" hidden>Please choose from list only</p>
+
               </div>
               <!-- QUANTITY -->
               <div>
