uyen done with the add form

--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -90,7 +90,7 @@
                   <input class="form-control" list="vending-machine-list" id="vending-machine" placeholder="Look up vending machine..." />
                   <datalist id="vending-machine-list"></datalist>
                 </div>
-                <p id="unmatching-type-message" class="message-display" hidden>This machine is not for this product type</p>  
+                <p id="unmatching-type-message" class="message-display" hidden>Product category and vending machine type are incompatible</p>  
                 <p id="not-predefined-vending-machine-message" class="message-display" hidden>Please choose from list only</p>
 
               </div>
