--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -106,10 +106,11 @@
               </div>
               <!-- SUBMIT BUTTON -->
               <div style="margin-top: 30px">
-                <button type="submit" class="btn btn-danger" id="submit-button">Add Products</button>
+                <button type="submit" class="btn btn-danger" id="submit-button" disabled>Add Products</button>
                 <a class="cancelBtn" href="./AdminInventoryDashboard.html">
                   <button type="button" class="btn btn-outline-secondary">Cancel</button>
                 </a>
+                <p id="no-submit-message" hidden>Please make sure all data is correctly entered</p>
               </div>
             </div>
           </div>
