--- a/client/HTML/AdminInventoryDashboard.html
+++ b/client/HTML/AdminInventoryDashboard.html
@@ -18,9 +18,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="https://www.google.com/">About Us</a>
-              <a class="nav-link" href="https://www.google.com/">Contact</a>
+              <a class="nav-link active" aria-current="page" href="./LandingPage.html">Home</a>
+              <a class="nav-link" href="./AboutUs.html">About Us</a>
+              <a class="nav-link" href="./ContactUs.html">Contact</a>
             </div>
           </div>
         </div>
