--- a/client/HTML/AdminLogin.html
+++ b/client/HTML/AdminLogin.html
@@ -18,8 +18,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">About Us</a>
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="./AboutUs.html">About Us</a>
+              <a class="nav-link" href="./ContactUs.html">Contact</a>
             </div>
           </div>
         </div>
