--- a/client/HTML/ContactUs.html
+++ b/client/HTML/ContactUs.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Inventory Dashboard</title>
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
 </head>
-<body onload="handleOnLoad()">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<body>
+    
+     <!-- Navbar -->
+     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">TTV</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,20 +26,19 @@
         </div>
       </nav>
        <!-- Navbar -->
-      <!-- JumboTron -->
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 class="jumbotron-heading">Welcome to TTV</h1>
-            <a href="./Individual Machine.html" class="btn btn-danger my-2">Customer</a>
-            <a href="./AdminLogin.html" class="btn btn-secondary my-2">Manager</a>
-          </p>
-        </div>
-      </section>
+       <div class="container mt-4">
+        <h1>Contact Us</h1>
+        <p>For any inquiries, please feel free to contact us using the information below:</p>
+        <ul>
+            <li>Email: ajtroup1@crimson.ua.edu</li>
+            <li>Phone: 256-746-6217</li>
+            <li>Address: 410 Grace St, Tuscaloosa, AL 35401</li>
+        </ul>
+        <!-- Add more content as needed -->
+    </div>
 
-
-
-
-    <script src="../Adam JS/individual machine.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="../JS/AdminInventoryDashBoard.js"></script>
+    <!-- Index JS -->
 </body>
 </html>
