--- a/client/HTML/AboutUs.html
+++ b/client/HTML/AboutUs.html
@@ -1,26 +1,40 @@
+<!-- about.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us - Admin Inventory Dashboard</title>
+    <!-- Include Bootstrap CSS if needed -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
 </head>
 <body>
-    <!-- Navbar -->
+    <!-- Navbar (if you want to keep the navigation consistent) -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">TTV</a>
+          <a class="navbar-brand" href="./LandingPage.html">TTV</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="../HTML/Home.html">Home</a>
-              <a class="nav-link" href="../HTML/AboutUs.html">About Us</a>
-              <a class="nav-link" href="../HTML/ContactUs.html">Contact</a>
+              <a class="nav-link" href="./MachineDashboard.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./AboutUs.html">About Us</a>
+              <a class="nav-link" href="./ContactUs.html">Contact</a>
             </div>
           </div>
         </div>
     </nav>
+    <!-- Navbar -->
+
+    <!-- About Us Content -->
+    <div class="container mt-4">
+        <h1>About Us</h1>
+        <p>Welcome to the Admin Inventory Dashboard! Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...</p>
+        <!-- Add more content as needed -->
+    </div>
+
+    <!-- Include Bootstrap JS if needed -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
 </body>
 </html>
