added more filter options

--- a/client/HTML/AdminInventoryDashboard.html
+++ b/client/HTML/AdminInventoryDashboard.html
@@ -72,6 +72,13 @@
             <li><a class="dropdown-item" href="#" onclick="filterData('Snack')">Snack</a></li>
             <li><a class="dropdown-item" href="#" onclick="filterData('Drink')">Drink</a></li>
             <li><a class="dropdown-item" href="#" onclick="filterData('Electronic')">Electronic</a></li>
+            <div class="dropdown-divider"></div>
+            <li><a class="dropdown-item" href="#" onclick="filterData('Northeast')">Northeast</a></li>
+            <li><a class="dropdown-item" href="#" onclick="filterData('Southeast')">Southeast</a></li>
+            <li><a class="dropdown-item" href="#" onclick="filterData('Midwestast')">Midwest</a></li>
+            <li><a class="dropdown-item" href="#" onclick="filterData('Northeast')">Southwest</a></li>
+            <li><a class="dropdown-item" href="#" onclick="filterData('Northeast')">Northwest</a></li>
+            
           </ul>
         </div>
       </div>
