dont merge. working on filter functionality and banner updates

--- a/client/HTML/AdminInventoryDashboard.html
+++ b/client/HTML/AdminInventoryDashboard.html
@@ -69,8 +69,8 @@
             Filter By Category
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <li><a class="dropdown-item" href="#" onclick="filterData('Snack')">Snack</a></li>
-            <li><a class="dropdown-item" href="#" onclick="filterData('Drink')">Drink</a></li>
+            <li><a class="dropdown-item" href="#" onclick="filterData('filterData(2)')">Snack</a></li>
+            <li><a class="dropdown-item" href="#" onclick="filterData('filterData(1)')">Drink</a></li>
             <li><a class="dropdown-item" href="#" onclick="filterData('Electronic')">Electronic</a></li>
             <div class="dropdown-divider"></div>
             <li><a class="dropdown-item" href="#" onclick="filterData('Northeast')">Northeast</a></li>
