correct filtering on admindash

--- a/client/HTML/AdminInventoryDashboard.html
+++ b/client/HTML/AdminInventoryDashboard.html
@@ -33,15 +33,15 @@
           <div class="row">
             <div class="col">
               <p>Inventory Available</p>
-              <span id="inventoryAvailableNumber">100</span>
+              <span id="inventoryAvailableNumber"></span>
             </div>
             <div class="col">
               <p>Sold Inventory</p>
-              <span id="soldInventoryNumber">50</span>
+              <span id="soldInventoryNumber"></span>
             </div>
             <div class="col">
               <p>Sales Revenue</p>
-              <span id="salesRevenueNumber">$500</span>
+              <span id="salesRevenueNumber"></span>
             </div>
           </div>
         </div>
@@ -69,15 +69,15 @@
             Filter By Category
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <li><a class="dropdown-item" href="#" onclick="filterData('filterData(2)')">Snack</a></li>
-            <li><a class="dropdown-item" href="#" onclick="filterData('filterData(1)')">Drink</a></li>
-            <li><a class="dropdown-item" href="#" onclick="filterData('Electronic')">Electronic</a></li>
-            <div class="dropdown-divider"></div>
-            <li><a class="dropdown-item" href="#" onclick="filterData('Northeast')">Northeast</a></li>
-            <li><a class="dropdown-item" href="#" onclick="filterData('Southeast')">Southeast</a></li>
+            <li><a class="dropdown-item" href="#" onclick="filterData(1,1)">Drink</a></li>
+            <li><a class="dropdown-item" href="#" onclick="filterData(2,2)">Snack</a></li>
+            <li><a class="dropdown-item" href="#" onclick="filterData(3,3)">Electronic</a></li>
+            <!-- <div class="dropdown-divider"></div>
+            <li><a class="dropdown-item" href="#" onclick="null">Northeast</a></li>
+            <li><a class="dropdown-item" href="#" onclick="null">Southeast</a></li>
             <li><a class="dropdown-item" href="#" onclick="filterData('Midwestast')">Midwest</a></li>
             <li><a class="dropdown-item" href="#" onclick="filterData('Northeast')">Southwest</a></li>
-            <li><a class="dropdown-item" href="#" onclick="filterData('Northeast')">Northwest</a></li>
+            <li><a class="dropdown-item" href="#" onclick="filterData('Northeast')">Northwest</a></li> -->
             
           </ul>
         </div>
