added banner functionality

--- a/client/HTML/AdminInventoryDashboard.html
+++ b/client/HTML/AdminInventoryDashboard.html
@@ -32,16 +32,16 @@
         <div class="card-body">
           <div class="row">
             <div class="col">
-              <p>Inventory Available</p>
-              <span id="inventoryAvailableNumber"></span>
+              <p id="availableInventoryDisplay">Available Inventory: 0</p>
+              <!-- <span id="inventoryAvailableNumber"></span> -->
             </div>
             <div class="col">
-              <p>Sold Inventory</p>
-              <span id="soldInventoryNumber"></span>
+              <p id="soldInventoryNumber">Sold Inventory: 0</p>
+              <!-- <span id="soldInventoryNumber"></span> -->
             </div>
             <div class="col">
-              <p>Sales Revenue</p>
-              <span id="salesRevenueNumber"></span>
+              <p id="salesRevenueDisplay">Sales Revenue: $0.00</p>
+              <!-- <span id="salesRevenueNumber"></span> -->
             </div>
           </div>
         </div>
