Uyen finished Add New Stocks form

--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -114,7 +114,7 @@
                 <a class="cancelBtn" href="./AdminInventoryDashboard.html">
                   <button type="button" class="btn btn-outline-secondary">Cancel</button>
                 </a>
-                <p id="exitsted-stock-message" hidden></p>
+                <p id="existed-stock-message" class="message-display" hidden></p>
               </div>
             </div>
           </div>
