Uyen done with Edit form

--- a/client/HTML/EditStocks.html
+++ b/client/HTML/EditStocks.html
@@ -84,7 +84,7 @@
               <!-- QUANTITY -->
               <div>
                 <!-- label for quantity -->
-                <label for="quantity" class="col-form-label">Quantity</label>
+                <label for="quantity" class="col-form-label">***Updated Quantity</label>
                 <!-- number input for quantity -->
                 <div class="col-sm-10">
                   <input type="number" min=1 class="form-control" id="quantity" required>
