Uyen edited edit form

--- a/client/HTML/EditStocks.html
+++ b/client/HTML/EditStocks.html
@@ -95,7 +95,7 @@
               <div style="margin-top: 30px">
                 <button type="submit" class="btn btn-danger" id="submit-button">Update Stock</button>
                 <a class="cancelBtn" href="./AdminInventoryDashboard.html">
-                  <button type="button" class="btn btn-outline-secondary">Cancel</button>
+                  <button type="button" class="btn btn-outline-secondary">Back</button>
                 </a>
                 <p id="no-submit-message" hidden>Please make sure all data is correctly entered</p>
               </div>
