--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -112,7 +112,7 @@
               <div style="margin-top: 30px">
                 <button type="submit" class="btn btn-danger" id="submit-button" disabled>Add Stock</button>
                 <a class="cancelBtn" href="./AdminInventoryDashboard.html">
-                  <button type="button" class="btn btn-outline-secondary">Cancel</button>
+                  <button type="button" class="btn btn-outline-secondary">Back</button>
                 </a>
                 <p id="existed-stock-message" class="message-display" hidden></p>
               </div>
