Dylan updated css

--- a/client/HTML/AdminLogin.html
+++ b/client/HTML/AdminLogin.html
@@ -6,58 +6,58 @@
     <title>Admin Login</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="../CSS/adminLogin.css">
 </head>
 <body>
-     <!-- Navbar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">TTV</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="./AboutUs.html">About Us</a>
-              <a class="nav-link" href="./ContactUs.html">Contact</a>
+            <a class="navbar-brand" href="#">TTV</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="./AboutUs.html">About Us</a>
+                    <a class="nav-link" href="./ContactUs.html">Contact</a>
+                </div>
             </div>
-          </div>
         </div>
-      </nav>
-       <!-- Navbar -->
+    </nav>
 
+    <!-- Banner -->
+    <div class="banner-container">
+        <img src="../sources/vending-banner.jpg" alt="vendingbanner">
+    </div>
 
-
-
-      <div class="card" style="width: 500px; margin: 0 auto; text-align: center;">
+    <!-- Admin Login Card -->
+    <div class="card">
         <div class="card-body">
-          <div id="loginError">
-            <p>Wrong username or password.</p>
-          </div>
-          <h5 class="card-title"><font color="#af002a">Admin Login</font></h5>
-          <form id="loginForm"> <!-- Wrap inputs in a form element -->
-            <!-- Username input -->
-            <div class="form-outline mb-4">
-              <label class="form-label" for="usernameInput">Username</label>
-              <input type="username" id="usernameInput" class="form-control" />
+            <div id="loginError">
+                <p>Wrong username or password.</p>
             </div>
-            <!-- Password input -->
-            <div class="form-outline mb-4">
-              <input type="password" id="passwordInput" class="form-control" />
-              <label class="form-label" for="passwordInput">Password</label>
-            </div>
-            <!-- Login button -->
-            <input type="submit" value="Login" id="loginFormSubmit">
-            <!-- <button id="loginButton" class="btn btn-primary" style="background-color: #af002a;">Login</button> -->
-          </form>
-          <p id="login-error-msg" style="color: red; display: none;">Incorrect username or password.</p>
+            <h5 class="card-title"><font color="#af002a">Admin Login</font></h5>
+            <form id="loginForm">
+                <!-- Username input -->
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="usernameInput">Username</label>
+                    <input type="username" id="usernameInput" class="form-control" />
+                </div>
+                <!-- Password input -->
+                <div class="form-outline mb-4">
+                    <input type="password" id="passwordInput" class="form-control" />
+                    <label class="form-label" for="passwordInput">Password</label>
+                </div>
+                <!-- Login button -->
+                <input type="submit" value="Login" id="loginFormSubmit">
+            </form>
+            <p id="login-error-msg" style="color: red; display: none;">Incorrect username or password.</p>
         </div>
-      </div>
+    </div>
 
-
-       <!-- Login box -->
-
-       <!-- Boostrap JS -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- Index JS -->
     <script src="../JS/AdminLogin.js"></script>
