--- a/client/HTML/LandingPage.html
+++ b/client/HTML/LandingPage.html
@@ -5,41 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="../CSS/homeother.css" rel="stylesheet">
+    <style>
+        .jumbotron {
+            background: transparent;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1;
+        }
+
+        .jumbotron .container {
+            z-index: 2;
+        }
+
+        .banner-container {
+            position: relative;
+        }
+
+        img {
+            width: 100%;
+            height: 50%;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body onload="handleOnLoad()">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">TTV <span class="sr-only">*</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                </li>
+            </ul>
         </div>
-      </nav>
-      <!-- JumboTron -->
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 class="jumbotron-heading">Welcome to TTV</h1>
-            <a href="./MachineDashboard.html" class="btn btn-danger my-2">Customer</a>
-            <a href="./AdminLogin.html" class="btn btn-secondary my-2">Manager</a>
-          </p>
-        </div>
-      </section>
+    </nav>
 
+    <!-- Banner and Jumbotron -->
+    <div class="banner-container">
+        <img src="../sources/vending-banner.jpg" alt="vendingbanner">
+        <section class="jumbotron text-center">
+            <div class="container">
+                <h1 class="jumbotron-heading">Welcome to TTV</h1>
+                <a href="./MachineDashboard.html" class="btn btn-danger my-2">Customer</a>
+                <a href="./AdminLogin.html" class="btn btn-secondary my-2">Manager</a>
+            </div>
+        </section>
+    </div>
 
-
-
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
