soldInventory and SalesReveue

--- a/client/HTML/AdminInventoryDashboard.html
+++ b/client/HTML/AdminInventoryDashboard.html
@@ -93,7 +93,7 @@
         <ul class="dropdown-menu" aria-labelledby="regionDropdownMenuButton">
             <li><a class="dropdown-item" href="#" onclick="filterByRegion('West')">West</a></li>
             <li><a class="dropdown-item" href="#" onclick="filterByRegion('MidWest')">MidWest</a></li>
-            <li><a class="dropdown-item" href="#" onclick="filterByRegion('Midwest')">SouthWest</a></li>
+            <li><a class="dropdown-item" href="#" onclick="filterByRegion('SouthWest')">SouthWest</a></li>
             <li><a class="dropdown-item" href="#" onclick="filterByRegion('East')">East</a></li>
             <li><a class="dropdown-item" href="#" onclick="filterByRegion('Northeast')">Northeast</a></li>
           </ul>
