Uyen added submit checkout

--- a/client/HTML/ThankYou.html
+++ b/client/HTML/ThankYou.html
@@ -7,7 +7,7 @@
     <link href="../CSS/thankyou.css" rel="stylesheet">
     <title>Thank You</title>
 </head>
-<body onload="handleOnLoad()">
+<body onload="populateThankYou()">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">TTV</a>
